# petrovisor-python-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docs.yml  publish.yml  python-package-tests.yml  tests.yml
docs/: index.md
docs/getting-started/: _category_.json  installation.md  usage.md
docs/guides/: _category_.json  working-with-signals.md
docs/markdown-guides/: _category_.json  markdown-tutorial.mdx  mdx-tutorial.mdx
examples/: basics.ipynb  entities_and_signals.ipynb  files_and_python_objects_storage.ipynb  machine_learning.ipynb  petrovisor_items.ipynb  pivot_tables.ipynb  psharp_scripts.ipynb  reference_tables.ipynb  workflows.ipynb  workspace_values.ipynb
petrovisor/: __init__.py  petrovisor.py
petrovisor/api/dtypes/: data_grids.py
petrovisor/api/enums/: arguments.py  internal_dtypes.py  items.py
petrovisor/api/methods/: data_grids.py  dataframes.py  entities.py  files.py  items.py  logs.py  ml.py  pivot_tables.py  psharp.py  reference_tables.py  signals.py  workspace_values.py
petrovisor/api/models/: hierarchy.py  scope.py
petrovisor/api/protocols/: protocols.py
petrovisor/api/utils/: datastructs.py  helper.py  login.py  requests.py
petrovisor/models/: argument.py
scripts/: create_docusaurus_project.sh  docstring_to_mdx.py  docstring_utils.py  generate_docs.py  generate_docs.sh  requirements-docs.txt
scripts/config/: docs_config.json
src/petrovisor/: __init__.py  petrovisor.py
src/petrovisor/api/: base.py  login.py  petrovisor.py  requests.py
src/petrovisor/api/dtypes/: data_grids.py  increments.py  internal_dtypes.py  items.py  ml.py  signals.py
src/petrovisor/api/enums/: arguments.py  increments.py  ml.py
src/petrovisor/api/methods/: contexts.py  data_grids.py  dataframes.py  entities.py  files.py  items.py  logs.py  ml.py  pivot_tables.py  psharp.py  reference_tables.py  signals.py  units.py  workflows.py  workspace_values.py
src/petrovisor/api/models/: base_model.py  context.py  entity.py  entity_set.py  signal.py  unit.py
src/petrovisor/api/protocols/: protocols.py
src/petrovisor/api/utils/: datastructs.py  general.py  helper.py  login.py  requests.py  validators.py
src/petrovisor/models/: contexts.py  contexts_manager.py
src/petrovisor/tests/: conftest.py
tests/: conftest.py  test_api.py  test_entities_and_signals.py  test_files.py  test_reference_tables.py  test_signals.py  test_units.py
website/: .gitignore  .prettierrc  docusaurus.config.ts  eslint.config.js  package.json  sidebars.ts
website/src/components/HomepageFeatures/: index.tsx  styles.module.css
website/src/css/: custom-admonition.css  custom-collapsible.css  custom.css
website/src/pages/: index.module.css  index.tsx
website/src/remark/: custom-admonitions.ts
website/src/theme/Admonition/: CustomAdmonitionComponent.tsx  DetailsAdmonitionComponent.tsx  EnhancedDefaultAdmonitions.tsx  Types.tsx  index.tsx
website/src/theme/Icons/: ClassIcon.tsx  FunctionIcon.tsx  index.ts
