[build-system]
requires = [
    "setuptools>=48",
    "wheel >= 0.29.0"
]
build-backend = "setuptools.build_meta"

[project]
name = 'petrovisor'
dynamic = [
    'version'
]
description = 'Python API for PetroVisor platform.'
readme = 'README.md'
authors = [
    { name = 'Datagration Solutions Inc.', email = 'developers@datagration.com' }
]
license = {file = 'LICENSE'}
requires-python = '>=3.7'
dependencies = [
    "requests",
    "pandas",
    "numpy"
]

classifiers = [
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
]

[project.urls]
"repository" = "https://github.com/Datagration/petrovisor-python-api"

[tool.setuptools.dynamic]
version = {attr = "petrovisor.__version__"}