[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petrovisor"
description = "Python API for PetroVisor platform."
readme = "README.md"
authors = [
    { name = "Weatherford International plc", email = "support.datagration@weatherford.com" }
]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "pydantic",
    "openpyxl",
    "xlsxwriter",
    "typing-extensions"
]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/Datagration/petrovisor-python-api"

[tool.hatch.version]
path = "petrovisor/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["petrovisor"]

[tool.hatch.build.targets.sdist]
exclude = [
    "examples/*",
    "experimental/*",
    "tests/*",
    "website/*",
    "docs/*",
    "scripts/*",
    "*.egg-info",
    ".gitignore",
    ".git",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pytest-cov",
    
    # Development tools
    "pre-commit",
    "ruff",
    "flake8",
    "hatchling",
    "build"
]

# Keep existing Ruff configuration
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
