[metadata]
name = petrovisor
version = 0.1.0
author = Datagration Solutions Inc.
author_email = developers@datagration.com
description = Python API for PetroVisor platform.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/petrovisor
project_urls =
    Bug Tracker = https://github.com/pypa/petrovisor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src