[metadata]
name = petrovisor
version = 0.1.0
author = Datagration Solutions Inc.
author_email = developers@datagration.com
description = Python API for PetroVisor platform.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Datagration/petrovisor-python-api
classifiers =
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
exclude =
    examples*